--- a/neo4j-conf/neo4j.conf
+++ b/neo4j-conf/neo4j.conf
@@ -24,6 +24,7 @@ dbms.security.procedures.allowlist=apoc.*
 dbms.security.procedures.unrestricted=apoc.*
 dbms.directories.plugins=plugins
 dbms.directories.import=/var/lib/neo4j/import
+dbms.directories.export=/var/lib/neo4j/import
 
 dbms.memory.pagecache.size=512M
 dbms.directories.logs=logs
